# WebDemo

./: .gitattributes  README.md  impactdb.v1.2.dg_filled.db  pyproject.toml  users.db
wikimpacts_web/: __init__.py  app.py
wikimpacts_web/migrations_users/: alembic.ini  env.py
wikimpacts_web/migrations_users/versions/: 8187a20b44be_create_users_table.py
wikimpacts_web/static/: styles.css
wikimpacts_web/templates/: about.html  base.html  contact.html  index.html  layout.html  login.html  news.html  publications.html  register.html  search.html  search_results.html  visualization.html
