[tool.poetry]
name = "wikimpacts-web"
version = "0.1.0"
description = ""
authors = ["Paul Muñoz <paul.munoz@vub.be>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
flask = "^2.0.1"
numpy = "1.23.5"         # Downgrade to a stable version
pandas = "1.5.3"         # Version compatible with NumPy 1.23.5
matplotlib = "^3.4.3"
seaborn = "^0.11.1"
flask-sqlalchemy = "^3.1.1"
flask-bootstrap = "^3.3.7.1"
requests = "^2.32.3"
flask-mail = "^0.10.0"
geopandas = "^1.0.1"
fiona = "^1.10.1"
flask-migrate = "^4.0.7"
gunicorn = "^20.1.0"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
